# scanner-bridge

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: download.html
src/: index.html
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pdf.rs  server.rs
src-tauri/src/scanner/: escl.rs  macos.rs  mock.rs  mod.rs  windows.rs
src-tauri/tests/: mock_scanner.rs  pdf_assembly.rs  server_http.rs  server_websocket.rs
