[package]
name = "scanner-bridge"
version = "0.1.0"
edition = "2024"
description = "Local companion app that bridges web browsers to physical document scanners"
license = "MIT"

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + WebSocket server
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PDF generation
printpdf = "0.8"

# Image handling
image = "0.25"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1", features = ["v4"] }

# macOS scanner support
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSObject", "NSString", "NSArray", "NSThread"] }
block2 = "0.6"

# Windows scanner support
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Devices_ImageAcquisition",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Imaging",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
mock-scanner = []
