[package]
name = "scanner-bridge"
version = "0.1.0"
edition = "2024"
description = "Local companion app that bridges web browsers to physical document scanners"
license = "MIT"

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + WebSocket server
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PDF generation
printpdf = "0.8"

# Image handling
image = "0.25"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
if-addrs = "0.15"
uuid = { version = "1", features = ["v4"] }

# HTTP client for eSCL scanner protocol
reqwest = { version = "0.12", features = ["blocking"] }



[dev-dependencies]
tokio-tungstenite = "0.28"
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
mock-scanner = []
